PowerPack: Spotlight: Fixed recent column takes too much space

--- a/packages/PowerPack/css/power-pack.css
+++ b/packages/PowerPack/css/power-pack.css
@@ -162,6 +162,11 @@ div.ui-box > div.power-pack-activity-widget-content.ui-div.ui-panel {
     flex: 1 1 0;
 }
 
+.power-pack-activity-widget-spotlight-root > .grok-wait {
+    flex: 1 1 0;
+    min-width: 0;
+}
+
 .power-pack-activity-widget-spotlight-getting-started-column {
     margin-right: 13px;
     flex: 1 1 0;
